adding more detail to loading matrix download

--- a/vignettes/AncestryCheck.Rmd
+++ b/vignettes/AncestryCheck.Rmd
@@ -30,15 +30,13 @@ This method is based off the ancestry identification scheme used in the [Pan-UK
 BioBank analysis](https://pan.ukbb.broadinstitute.org/). 
 
 [Plink v2](https://www.cog-genomics.org/plink/2.0/) is needed for this portion of 
-the package. In addition, there is a data repository containing necessary files for
-running the provided pre-trained classier here: https://github.com/meyer-lab-cshl/plinkQC. [Git Large File Storage extention](https://git-lfs.com/) needs to be pre-installed to get the correct files.  
-This can be downloaded from github with:
+the package. Additional loading matrices are needed for the PCA projection used in the model.
+This is hosted on the plinkQC github repo under the inst/extdata folder located 
+[here](https://github.com/meyer-lab-cshl/plinkQC/tree/ancestry_update/inst/extdata/load_mat). Alternatively, the whole github repo can downloaded with
 ```{bash installing github, eval=FALSE}
-git clone git@github.com:meyer-lab-cshl/plinkQCAncestryData.git
+git clone git@github.com:meyer-lab-cshl/plinkQC.git
 ```
 
-If the zip folder downloaded is a smaller size than the expected 251.3MB, run 
-`git lfs fetch` to make sure the correct file gets downloaded. Unzip the file for future use. 
 
 ### Workflow
 
@@ -70,8 +68,9 @@ rename_variant_identifiers(indir=qcdir, qcdir=qcdir, name=name,
 name <- paste0(name, ".renamed")
 ```
 
-After correctly formatting the data, we can use the provided function to return the 
-predicted ancestry. Because this example uses only a small subset of variants for demonstration, additional noise is expected. 
+After correctly formatting the variants, we can use the provided function to return the 
+predicted ancestry. Because the example dataset has only a small number of variants 
+overlapping with the reference dataset, additional noise is expected.
 ``` {R ancestry identification, eval = FALSE}
 ancestries <- superpop_classification(indir=qcdir, qcdir=qcdir, name=name, 
                                       path2plink2 = path2plink2, 
